--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- title요소 : 브라우저 탭에 출력 -->
-    <title>프론트엔드 개발자 과정</title>
-    
-</head>
-<body>
-    
-</body>
+    <title>네이버요약뉴스 2025.05</title>
+  </head>
+  <body>
+    <!--alt+shift+a  -->
+    <!-- 1. 상단영역 -->
+    <header id="top-area" class="part">
+      <!-- 1-1. 타이틀 -->
+        <h1>네이버 요약뉴스</h1>
+        <!-- 1-2. 메뉴 -->
+             <nav class="menu">
+                <a href="index.html">
+                    <img src="images/naver_logo.png" alt="네이버로고">
+                </a>
+                <span> | </span>
+                <a href="sub.html">정치</a>
+                <span> | </span>
+                <a href="sub.html">경제</a>
+                <span> | </span>
+                <a href="sub.html">사회</a>
+                <span> | </span>
+                <a href="sub.html">IT/과학</a>
+                <span> | </span>
+                <a href="sub.html">TV/연예</a>
+             </nav>
+    </header>
+    <!-- <div id="header"></div> -->
+
+    <!-- 2. 메인영역 -->
+    <!-- <div id="main"></div> -->
+    <main id="main-area" class="part"></main>
+    <!-- 3. 메인하단 -->
+    <div id="footer"></div>
+    <footer id="info-area" class="part"></footer>
+    <a href="https://www.youtube.com/watch?v=aQY9z8K_gPU" target="_blank"
+      >https://www.youtube.com/watch?v=aQY9z8K_gPU</a
+    >
+  </body>
 </html>
